--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "server": "json-server -p3001 --watch db.json"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +13,18 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "json-server": "^0.17.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "eslint": "^8.22.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^2.0.19",
+    "standard": "^17.0.0"
+  },
+  "esLintConfig": {
+    "extends": "./node_modules/standar/eslintrc.json"
   }
 }
