--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   }
 }
