--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./index",
     "dev": "nodemon ./index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,10 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
