--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index",
-    "dev": "nodemon ./index",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -17,18 +17,18 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "mongodb-memory-server": "^8.9.0",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^28.1.3"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
