--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.9.0",
     "mongoose": "^6.5.2",
