--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.9.0",
     "mongoose": "^6.5.2",
+    "mongoose-unique-validator": "^3.1.0",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
