--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongodb-memory-server": "^8.9.0",
     "mongoose": "^6.5.2",
